--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,8 @@
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -25,16 +26,20 @@
 			<div class="collapse navbar-collapse" id="header-menu">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a href="{{ path('homepage') }}">Guestbook</a>
+						<a class="btn btn-success ms-2" href="{{ path('homepage') }}">{{ 'Home' }}</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Dropdown
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							{% for conference in conferences %}
-								<a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a>
-							{% endfor %}
+					<li class="nav-item dropdown ms-2">
+						<div class="dropdown">
+							<button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+								{{ 'Conferences' }}
+							</button>
+							<ul class="dropdown-menu">
+								{% for conference in conferences %}
+									<li>
+										<a class="dropdown-item" href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a>
+									</li>
+								{% endfor %}
+							</ul>
 						</div>
 					</li>
 				</ul>
