--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -48,12 +48,12 @@
                 <div class="row text-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xxl-4">
                         {% if previous >= 0 %}
-                            <a class="btn btn-danger" href="{{ path('conference', { id: conference.id, offset: previous }) }}">
+                            <a class="btn btn-danger" href="{{ path('conference', { slug: conference.slug, offset: previous }) }}">
                                 {{ '<<' }}
                             </a>
                         {% endif %}
                         {% if next < comments|length %}
-                            <a class="btn btn-danger" href="{{ path('conference', { id: conference.id, offset: next }) }}">
+                            <a class="btn btn-danger" href="{{ path('conference', { slug: conference.slug, offset: next }) }}">
                                 {{ '>>' }}
                             </a>
                         {% endif %}
