--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -17,7 +17,7 @@
 		{% if comments|length > 0 %}
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-1 col-xxl-12">
-					<h5 class="h5 text-left">
+					<h5 class="h5 text-left conference-comments-count">
 						{{ 'There are ' ~ comments|length ~ ' comments.' }}
 					</h5>
 				</div>
@@ -65,7 +65,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xxl-4">
 					<div class="alert alert-warning" role="alert">
-						{{ 'There are no conferences in the system' }}
+						{{ 'There are no comments in the system' }}
 					</div>
 				</div>
 			</div>
