war with mailer

--- a/templates/emails/comment_notification.html.twig
+++ b/templates/emails/comment_notification.html.twig
@@ -1,42 +1,17 @@
-{% extends 'base.html.twig' %}
-<div>
+{% extends '@email/default/notification/body.html.twig' %}
 
-	{% block content %}
-		<div>
-			<div>
-				<div>
-					Author:
-					{{ comment.author }}
-				</div>
-				<div>
-					Email:
-					{{ comment.email }}
-				</div>
-				<div>
-					State:
-					{{ comment.state }}
-				</div>
+{% block content %}
+    Author: {{ comment.author }}<br />
+    Email: {{ comment.email }}<br />
+    State: {{ comment.state }}<br />
 
-				<p>
-					{{ comment.text }}
-				</p>
-			</div>
-		</div>
-	{% endblock %}
+    <p>
+        {{ comment.text }}
+    </p>
+{% endblock %}
 
-	{% block action %}
-		<div>
-			<div>
-				<div>
-					<button href="{{ url('review_comment', { id: comment.id }) }}">
-						Accept
-					</button>
-					<button href="{{ url('review_comment', { id: comment.id, reject: true }) }}">
-						Reject
-					</button>
-				</div>
-			</div>
-		</div>
-	{% endblock %}
-
-</div>
+{% block action %}
+    <spacer size="16"></spacer>
+    <button href="{{ url('review_comment', { id: comment.id }) }}">Accept</button>
+    <button href="{{ url('review_comment', { id: comment.id, reject: true }) }}">Reject</button>
+{% endblock %}
