--- a/templates/conference/homepage.html.twig
+++ b/templates/conference/homepage.html.twig
@@ -8,13 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xxl-12">
-                {% if conferences|length > 0 %}
-                    {% for conference in conferences %}
-                        <a class="btn btn-outline-success mt-4 w-100 py-4 conference-btn" href="{{ path('conference', { slug: conference.slug }) }}">
-                            {{ conference ~ ' Conference' }}
-                        </a>
-                    {% endfor %}
-                {% endif %}
+                {{ render(path('conference_header')) }}
             </div>
         </div>
     </div>
