--- a/templates/conference/homepage.html.twig
+++ b/templates/conference/homepage.html.twig
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xxl-12">
-                {{ render(path('conference_header')) }}
+                {{ render_esi(path('conference_header')) }}
             </div>
         </div>
     </div>
